finished index.html

--- a/index.html
+++ b/index.html
@@ -11,37 +11,48 @@
 </head>
 
 <body>
-    <div class="jumbotron">
-        <h1 class="text-center">
-            <span class="glyphicon glyphicon-fire"></span>
-            Hot Restaurant
-        </h1>
-        <hr class="my-4">
+    <div class="container">
+        <div class="jumbotron">
+            <h1 class="text-center">
+                <span class="glyphicon glyphicon-fire"></span>
+                Hot Restaurant
+            </h1>
 
-        <h3 class="text-center">We only have 5 tables! Book your seat before they all are gone!</h3>
+            <hr>
 
-        <div class="text-center">
+            <h3 class="text-center">We only have 5 tables! Book your seat before they all are gone!</h3>
 
-            <a href="/view tables page">
-                <button type="button" class="btn btn-large btn btn-primary">
-                    <span class="glyphicon glyphicon-list-alt"></span>
-                    <p>View Tables</p>
-                </button>
-            </a>
+            <br>
 
-            <a href="/make reservations page">
-                <button type="button" class="btn btn-large btn btn-danger">
-                    <span class="glyphicon glyphicon-credit-card"></span>
-                    <p>Make Reservations</p>
-                </button>
-            </a>
+            <div class="text-center">
+
+                <a href="/view tables page">
+                    <button type="button" class="btn btn-lg btn btn-primary">
+                        <span class="glyphicon glyphicon-list-alt"></span>
+                        View Tables
+                    </button>
+                </a>
+
+                <a href="/make reservations page">
+                    <button type="button" class="btn btn-lg btn btn-danger">
+                        <span class="glyphicon glyphicon-credit-card"></span>
+                        Make Reservations
+                    </button>
+                </a>
+
+            </div>
+            <!-- end buttons -->
 
         </div>
-
+        <!-- end jumbotron -->
     </div>
+    <!-- end container -->
+
     <footer class="footer">
-       <a>API Table Link |</a> 
-       <a>API Wait List</a> 
+        <div class="container">
+            <a>API Table Link |</a>
+            <a>API Wait List</a>
+        </div>
     </footer>
 </body>
 
