added changes for mistakes

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 
             <div class="text-center">
 
-                <a href="/view tables page">
+                <a href="/view.html">
                     <button type="button" class="btn btn-lg btn btn-primary">
                         <span class="glyphicon glyphicon-list-alt"></span>
                         View Tables
                     </button>
                 </a>
 
-                <a href="/make reservations page">
+                <a href="/make.html">
                     <button type="button" class="btn btn-lg btn btn-danger">
                         <span class="glyphicon glyphicon-credit-card"></span>
                         Make Reservations
@@ -50,8 +50,9 @@
 
     <footer class="footer">
         <div class="container">
-            <a>API Table Link |</a>
-            <a>API Wait List</a>
+            <a href="localhost:3000/api/tables">API Table Link</a>
+            |
+            <a href="localhost:3000/api/waitlist">API Wait List</a>
         </div>
     </footer>
 </body>
