--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 
             <div class="text-center">
 
-                <a href="/view.html">
+                <a href="/view">
                     <button type="button" class="btn btn-lg btn btn-primary">
                         <span class="glyphicon glyphicon-list-alt"></span>
                         View Tables
                     </button>
                 </a>
 
-                <a href="/make.html">
+                <a href="/make">
                     <button type="button" class="btn btn-lg btn btn-danger">
                         <span class="glyphicon glyphicon-credit-card"></span>
                         Make Reservations
