--- a/view.html
+++ b/view.html
@@ -26,7 +26,7 @@
                 <a href="/make"><button type="button" class="btn btn-danger">
                     <span class="glyphicon glyphicon-folder-close"></span> Make Reservation</button></a>
 
-                <a href="/index"><button type="button" class="btn btn-default">
+                <a href="/"><button type="button" class="btn btn-default">
                     <span class="glyphicon glyphicon-home"></span>
                 </button></a>
 
