--- a/make.html
+++ b/make.html
@@ -25,7 +25,7 @@
                 <a href="/view"><button type="button" class="btn btn-primary">
                     <span class="glyphicon glyphicon-th-list"></span> View Tables</button></a>
 
-                    <a href="/index"><button type="button" class="btn btn-default">
+                    <a href="/"><button type="button" class="btn btn-default">
                     <span class="glyphicon glyphicon-home"></span></a>
                 </button>
 
@@ -61,10 +61,7 @@
                                 <input type="text" class="form-control" id="email">
                             </div>
 
-                            <div class="form-group">
-                                <label for="force-points">Unique ID</label>
-                                <input type="text" class="form-control" id="id">
-                            </div>
+                            
 
                         </form>
                         <br>
