--- a/make.html
+++ b/make.html
@@ -26,8 +26,8 @@
                     <span class="glyphicon glyphicon-th-list"></span> View Tables</button></a>
 
                     <a href="/"><button type="button" class="btn btn-default">
-                    <span class="glyphicon glyphicon-home"></span></a>
-                </button>
+                    <span class="glyphicon glyphicon-home"></span>
+                </button></a>
 
             </div>
         </div>
@@ -98,7 +98,7 @@
           $.post("/make", newReservation)
             .then(function(data) {
               console.log("make.html", data);
-              alert("Adding ...");
+              
             });
         });
       </script>
