--- a/view.html
+++ b/view.html
@@ -7,6 +7,7 @@
     <!-- Latest compiled and minified CSS & JS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="/view.css" />
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 
 </head>
@@ -43,7 +44,7 @@
                     <div class="panel-heading">
                         <h3 class="panel-title">
                             <strong>Current Reservations</strong>
-                            <ul id="reserved"></ul>
+                            <ul class="reserv-list" id="reserved"></ul>
                         </h3>
                     </div>
                 </div>
@@ -59,7 +60,7 @@
                     <div class="panel-heading">
                         <h3 class="panel-title">
                             <strong>Waiting List</strong>
-                            <ul id="wait-list-table"></ul>
+                            <ul class="reserv-list" id="wait-list-table"></ul>
                         </h3>
                     </div>
                 </div>
